--- a/config.yaml
+++ b/config.yaml
@@ -25,7 +25,7 @@ params:
         avatar:
             enabled: true
             local: true
-            src: img/avatar.png
+            src: img/AVA.png
 
     article:
         headingAnchor: false
